--- a/Artist Page/artistPage.html
+++ b/Artist Page/artistPage.html
@@ -79,39 +79,35 @@
         </div>
     </nav>
 
-
-    <!-- <div class="userImg">
-        <img src="img/Image PlaceHolder(3).png" alt="" class="background">
-            <img src="img/Asset 12 2(7).png" alt="" class="avatar">
-    </div> -->
     <img src="img/Cover + Profile Image(1).png" class="desktopM w100" alt="">
     <img src="img/Cover + Profile Image.png" alt="" class="mobile background">
     <section>
         <div class="userMain">
             <h1>Animakid</h1>
             <div class="right">
-                <a class="pinkBut">
+                <button class="pinkBut" id="copyButton">
                     <span>
                         <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M6.75 3.125C6.75 2.77982 7.02982 2.5 7.375 2.5H17.375C17.7202 2.5 18 2.77982 18 3.125V13.125C18 13.4702 17.7202 13.75 17.375 13.75H13.625C13.2798 13.75 13 13.4702 13 13.125C13 12.7798 13.2798 12.5 13.625 12.5H16.75V3.75H8V6.875C8 7.22018 7.72018 7.5 7.375 7.5C7.02982 7.5 6.75 7.22018 6.75 6.875V3.125Z" fill="white"/>
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M3 6.875C3 6.52982 3.27982 6.25 3.625 6.25H13.625C13.9702 6.25 14.25 6.52982 14.25 6.875V16.875C14.25 17.2202 13.9702 17.5 13.625 17.5H3.625C3.27982 17.5 3 17.2202 3 16.875V6.875ZM4.25 7.5V16.25H13V7.5H4.25Z" fill="white"/>
                         </svg>
                     </span>
-                    <span class="balanc">    
-                        0xc0E3...B79C
-                    </span>
-                </a>
-                <a class="blackButton">
-                    <span>
+                    <div class="success-message" id="successMessage">
+                        Copied!
+                    </div>
+                    <span class="balanc" id="textToCopy">0xc0E3...B79C</span>
+                </button>
+                <button class="blackButton" id="followButton">
+                    <span id="followSvg">
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M2.5 10C2.5 9.65482 2.77982 9.375 3.125 9.375H16.875C17.2202 9.375 17.5 9.65482 17.5 10C17.5 10.3452 17.2202 10.625 16.875 10.625H3.125C2.77982 10.625 2.5 10.3452 2.5 10Z" fill="#A259FF"/>
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M10 2.5C10.3452 2.5 10.625 2.77982 10.625 3.125V16.875C10.625 17.2202 10.3452 17.5 10 17.5C9.65482 17.5 9.375 17.2202 9.375 16.875V3.125C9.375 2.77982 9.65482 2.5 10 2.5Z" fill="#A259FF"/>
                         </svg>
                     </span>
-                    <span class="balanc">
+                    <span class="balanc" id="followText">
                         Follow
                     </span>
-                </a>
+                </button>
             </div>
         </div>
         <div class="actions">
@@ -470,7 +466,7 @@
                 <span class="grayFoot">Join our community</span>
                 <a href="#" class="grayFoot" href="../../Market Place/marketPlace.html">Marketplace</a>
                 <a href="#" class="grayFoot" href="../../Rankings/rank.html">Rankings</a>
-          ../      <a href="wallege.html" class="grayFoot">Connect a wallet</a>
+                <a href="wallege.html" class="grayFoot">Connect a wallet</a>
             </div>
             <div class="lastButton footerItem">
                 <h2>Join our weekly digest</h2>
